syntax = "proto3";
import "aelf/core.proto";
import "aelf/options.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "AElf.Contracts.CopyRightContract";

service CopyRightContract {

    option (aelf.csharp_state) = "AElf.Contracts.CopyRightContract.CopyRightContractState";

    rpc CR_Initial (google.protobuf.Empty) returns (google.protobuf.Empty) { }//合约初始化

    rpc CR_Register (Identity) returns (aelf.SInt64Value) { }//用户注册

    rpc CR_Login(Identity) returns (aelf.SInt64Value) { }//用户登录

    rpc CR_Upload (UploadData) returns (aelf.SInt64Value) { }//上传版权

    rpc CR_Transfer (TransferData) returns (aelf.SInt64Value) { }//交易版权

    rpc CR_Logout(Identity) returns (aelf.SInt64Value){ }//用户登出

    rpc CR_Delete(Identity) returns (aelf.SInt64Value){ }//用户注销

    rpc Get_User_Info(aelf.Address) returns (Identity){
        option (aelf.is_view) = true;
    }
}

// a custom message, used as the return type of the Hello action
message Identity {//身份信息数据结构
    aelf.Address Address = 1;//地址
    //后续继续添加
}

message UploadData{
    aelf.Address CRT_Creator = 1;
    aelf.Address CRT_Owner = 2;
    string CRT_Content = 3;
    sint64 CRT_Status = 4;
}

message TransferData{
    aelf.Address addr = 1;
    aelf.Hash CRT_ID = 2;
    sint64 price = 3;
}